--- a/_posts/2022-12-23-56.md
+++ b/_posts/2022-12-23-56.md
@@ -8,7 +8,7 @@ tags: [ "aws", "amazon", "reinvent", "2022" ]
 spreaker: 52257896
 ---
 
-Reinvent AWS-owy – sprawdzamy, czego można się dowiedź na kolejnej konferencji w świecie IT.
+Reinvent AWS-owy – sprawdzamy, czego można się dowiedzieć na kolejnej konferencji w świecie IT.
 
 
 Linki i ciekawe znaleziska:
