--- a/_posts/2023-01-31-66.md
+++ b/_posts/2023-01-31-66.md
@@ -4,7 +4,7 @@ title: '#66 Patoarchitekci Short #15'
 date: 2023-01-31 08:00:00 +0200
 description: 
 img: "66"
-tags: 
+tags: ["devops","cloudnative","kubernetes","cloud"]
 spreaker: 12345678
 ---
 Czy **architekt** powinien kodować? W tym odcinku poruszamy tą jakże istotną kwestię: a także co nieco o jakości kodu.
