--- a/_posts/2023-01-20-58.md
+++ b/_posts/2023-01-20-58.md
@@ -1,19 +1,22 @@
-﻿---
+---
 layout: post
 title: '#58 Patoarchitekci Short #16'
 date: 2023-01-20 08:00:00 +0200
 description: 
 img: "58"
-tags: 
+tags: []
 spreaker: 52483308
 ---
 
 
+Linki i ciekawe znaleziska:
 
-
-Ciekawe linki i inne znaleziska z tego odcinka:
-* 
-
-
+- [](https://lspace.swyx.io/p/reverse-prompt-eng)
+- [](https://github.com/openai/openai-cookbook)
+- [](https://azure.microsoft.com/en-us/blog/general-availability-of-azure-openai-service-expands-access-to-large-advanced-ai-models-with-added-enterprise-benefits/)
+- [](https://www.uber.com/en-IN/blog/devpod-improving-developer-productivity-at-uber/)
+- [](https://www.infoq.com/news/2022/12/spotify-backstage-plugins/)
+- [](https://patoarchitekci.io/27/)
 
 ### Transkrypcja
+
