--- a/_posts/2023-01-20-58.md
+++ b/_posts/2023-01-20-58.md
@@ -13,8 +13,8 @@ Linki i ciekawe znaleziska:
 
 - [Reverse Prompt Engineering for Fun and (no) Profit](https://lspace.swyx.io/p/reverse-prompt-eng)
 - [GitHub - openai/openai-cookbook: Examples and guides for using the OpenAI API](https://github.com/openai/openai-cookbook)
-- [General availability of Azure OpenAI Service expands access to large, advanced AI models with added enterprise benefits | Azure Blog and Updates | Microsoft Azure](https://azure.microsoft.com/en-us/blog/general-availability-of-azure-openai-service-expands-access-to-large-advanced-ai-models-with-added-enterprise-benefits/)
-- [Devpod: Improving Developer Productivity at Uber with Remote Development | Uber Blog](https://www.uber.com/en-IN/blog/devpod-improving-developer-productivity-at-uber/)
+- [General availability of Azure OpenAI Service expands access to large, advanced AI models with added enterprise benefits](https://azure.microsoft.com/en-us/blog/general-availability-of-azure-openai-service-expands-access-to-large-advanced-ai-models-with-added-enterprise-benefits/)
+- [Devpod: Improving Developer Productivity at Uber with Remote Development](https://www.uber.com/en-IN/blog/devpod-improving-developer-productivity-at-uber/)
 - [Spotify Releases Enterprise Plugin Bundle for Backstage](https://www.infoq.com/news/2022/12/spotify-backstage-plugins/)
 - [#27 Patologie Mikroserwisów - Repozytoria - Patoarchitekci](https://patoarchitekci.io/27/)
 
